fixed issue of overflow hidden not working on ios

--- a/24.insect-catch-game/style.css
+++ b/24.insect-catch-game/style.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+    position: relative;
     height: 100vh;
     overflow: hidden;
     margin: 0;
